--- a/otp-verification-email-template.html
+++ b/otp-verification-email-template.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta charset="UTF-8" />
+  <meta charset='UTF-8' />
   <style>
     body {
       margin: 0;
@@ -69,8 +69,8 @@
 
 <body>
   <!--Subject: Login Verification Required for Your [App Name] Account-->
-  <div class="container">
-    <div class="header">
+  <div class='container'>
+    <div class='header'>
       <a>验证您的喵站帐号</a>
     </div>
     <br />
@@ -79,8 +79,8 @@
       <br />
       <b>您的一次性验证码是:</b>
     </p>
-    <h2 class="otp">{Insert OTP}</h2>
-    <p style="font-size: 0.9em">
+    <h2 class='otp'>{Insert OTP}</h2>
+    <p style='font-size: 0.9em'>
       <strong>一次性验证码的有效期为5分钟</strong>
       <br />
       <br />
@@ -92,8 +92,8 @@
       <br />
     </p>
 
-    <hr style="border: none; border-top: 0.5px solid #131111" />
-    <div class="footer">
+    <hr style='border: none; border-top: 0.5px solid #131111' />
+    <div class='footer'>
       <p>本邮件为自动发送，请不要尝试回复</p>
       <!-- <p>如果想知道更多喵站和您的帐号的信息, visit<strong>[Name]</strong></p> -->
     </div>
