--- a/otp-verification-email-template.html
+++ b/otp-verification-email-template.html
@@ -94,7 +94,7 @@
     <hr style='border: none; border-top: 0.5px solid #131111' />
     <div class='footer'>
       <p>本邮件为自动发送，请不要尝试回复</p>
-      <!-- <p>如果想知道更多喵站和您的帐号的信息, visit<strong>[Name]</strong></p> -->
+      <p>喵站官方群, <strong>101051539</strong></p>
     </div>
   </div>
 </body>
